# super-conductor-lab

./: .dockerignore  CLAUDE.md  Dockerfile  MANIFESTO.md  README.md  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
docs/bench/: README.md  ambient.csv  multi.csv  reliability.csv  reliability_baseline.csv  single.csv
docs/recorded/: active.jsonl  app.js  baseline.jsonl  index.html  style.css
scl/: __init__.py  active.py  agent.py  bench.py  candidates.py  chem.py  cli.py  diffphys.py  falsify.py  gnn.py  lab.py  loop.py  manifold.py  neural.py  nnqs.py  process.py  symbolic.py  world_model.py
scl/web/: __init__.py  app.py  runner.py  storage.py
scl/web/static/: app.js  index.html  style.css
scripts/: record_run.py
tests/: test_acquisitions.py  test_agent.py  test_bench.py  test_chem.py  test_diffphys.py  test_gnn.py  test_loop.py  test_manifold.py  test_neural.py  test_nnqs.py  test_process.py  test_symbolic.py  test_web.py  test_world_modes.py
