[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "super-conductor-lab"
version = "0.1.0"
description = "Closed-loop neuro-symbolic discovery engine for room-temperature superconductor candidates."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
scl = "scl.cli:main"

[tool.setuptools.packages.find]
include = ["scl*"]
